Changelog
=========

0.1dev (unreleased)
----------------------

- Added invariant to check out dataset dates.
  [David]
- Update to latest version of DGF, updating our widget template and fixing
  our JS for our code fields.
  [David]
- Fix issue with dataset form deleting values from certain fields (like
  keywords etc) - this was due to an issue with caching our getTermByToken
  function.
  [David]
- Stopped using a custom widget for our keywords - we can create a 'fake'
  result for any value the user types into the field in our QuerySource.
  [David]
- Changed various field names in dataset records - this will break backwards
  compatibility.
  [David]
- Made title for data record form same as rest of Plone via CSS and
  adjusted DGF fields.
  [David]
- Created work-around for KSS validation on fields.  All values always validate
  now until further notice.
  [David]
- Added Collection Type and IP field to data record content type
  [David]
- Refactor vocabularies out of our content type
  [David]
- Rework sources logic to let child sources return any SQLAlchemy conditions
  they like.  By default, we operate by or'ing all fields specified if the 
  search is inexact, and and'ing all fields if the search is exact.
  [David]
- Added new dependencies (jcu.theme, collective.z3cwidget.datagridfield,
  collective.geo.bundle)
  [David]
- Making the display view into a dexterity.DisplayForm (to get widgets, etc).
  [David]
- Removing the keycode from the keywords widget.
  [David]
- Made the autocomplete widgets not autofill by default.  There is a bug
  with this code and this needs to be sorted out upstream.
  [David]
- Refactored the database configuration functionality into the utils module.
  [David] 
- Put the user search into play on the Associations tab.  Javascript fixes
  required.
  [David]
- Finalised extendability of source query class -- we can now have custom
  query clauses without having to customise our entire search function.
  [David]